--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,47 @@
     <title>Exercice hebdomadaire 4</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="Chart">
+      <div class="ticket1">
+        <div class="EU"><p>Suisse</p></div>
+        <div class="barre">
+          <div class="un"><p>65%</p></div>
+          <div class="deux"><p>35%</p></div>
+        </div>
+      </div>
+      <div class="ticket2">
+        <div class="EU"><p>États-Unis</p></div>
+        <div class="barre">
+          <div class="un"><p>51%</p></div>
+          <div class="deux"><p>49%</p></div>
+        </div>
+      </div>
+      <div class="ticket3">
+        <div class="EU"><p>Europe</p></div>
+        <div class="barre">
+          <div class="un"><p>41%</p></div>
+          <div class="deux"><p>59%</p></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="legend">
+      <div class="mobile">
+        <div class="carre"></div>
+        <div class="mob"><p>Mobile</p></div>
+      </div>
+      <div class="desktop"></div>
+      <div class="carre2"></div>
+      <div class="des"><p>Desktop</p></div>
+    </div>
 
     <script src="js/main.js" type="module"></script>
   </body>
